do: adjust some sizing and placing values/ solve issues related to scrollbars

--- a/src/components/styles/header.css
+++ b/src/components/styles/header.css
@@ -6,7 +6,7 @@
   }
   
   .logo {
-    width: 70px;
+    width: 50px;
   }
   
   .intro {
